Added  authenticated document discovery
